--- a/index.html
+++ b/index.html
@@ -70,11 +70,7 @@
                 </div>
     </section>
     <section class="informacao">
-        <div class="quad">  <p>Plan</p>
-                            <p>1 Snak</p> 
-                            <p>Produto</p> 
-                            <p>Inicio do relacionamento</p>
-                            <button>
+        <div class="quad">            <button>
             </button>
             </div> <div class="quadrado">
 
@@ -84,10 +80,6 @@
         </div>
     </section>
     <section id="cadastro">
-        <h2> Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias animi dolore odio harum at! Explicabo
-            aperiam, doloribus quo magnam, commodi quia quis distinctio, vel consequuntur quaerat ipsum cumque nihil
-            iusto.
-        </h2>
         <div>
             <div class="redes">
                 <img src="img/index/redes.png" alt="ilustração de conexoes em redes">
